--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background_elevation1">#ffffff</color>
+    <color name="uikit_common_ripple">#dddfe0</color>
+    <color name="text_blue">#428bf9</color>
+    <color name="text_primary">#333333</color>
+    <color name="text_secondary">#9299a2</color>
 </resources>
