--- a/app/src/main/res/layout/employee_list_content.xml
+++ b/app/src/main/res/layout/employee_list_content.xml
@@ -25,10 +25,7 @@
             android:minHeight="56dp"
             android:orientation="horizontal"
             android:paddingHorizontal="16dp"
-            android:paddingVertical="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:paddingVertical="16dp">
 
             <ImageView
                 android:id="@+id/icon"
@@ -44,10 +41,7 @@
                 android:gravity="center_vertical"
                 android:minHeight="56dp"
                 android:orientation="vertical"
-                android:paddingHorizontal="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:paddingHorizontal="16dp">
 
                 <TextView
                     android:id="@+id/firstName"
